--- a/src/main/webapp/WEB-INF/templates/default.xhtml
+++ b/src/main/webapp/WEB-INF/templates/default.xhtml
@@ -19,7 +19,7 @@
             </ui:insert>
 		</div>
 		<div id="footer">
-			<p> (C) 2013  dpunkt.verlag GmbH, MIT Lizenz</p>
+			<p> (C) 2013  gumbleliks GmbH, MIT Lizenz</p>
 		</div>
 	</div>
 </h:body>
